# blockchain-simulator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: blockchain_config.yaml
src/: main.py
src/blockchain/: __init__.py  blockchain.py  engine.py
src/contracts/: __init__.py  amm_protocol.py  contract.py  liquidity_pool.py  uniswapV2.py  uniswapV3.py  uniswap_v2.py
src/core/: __init__.py  arbitrage.py  blockchain.py  erc20.py  historical_record.py  liquidity_pool.py  transaction.py  user.py
src/market/: __init__.py  token.py
src/market/actors/: __init__.py  user.py
src/simulation/: __init__.py  create_env.py  simulator.py
src/simulation/agents/: __init__.py  block_producer.py  liquidity_provider.py  user.py
src/utils/: logger.py  math.py
tests/: main.py
