[tool.poetry]
name = "blockchain-simulator"
version = "0.1.0"
description = "Simulator for the diamond protocol"
authors = ["Wonjae Choi <choi@wonj.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "contracts", from = "src" },
    { include = "core", from = "src" },
    { include = "market", from = "src" },
    { include = "simulation", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
